--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     <link rel="stylesheet" href="css/calendar.can-do-attitude.css">
     <link rel="stylesheet" href="css/calendar.candy-world.css">
     <link rel="stylesheet" href="css/calendar.cardinals-guards.css">
+    <link rel="stylesheet" href="css/calendar.caribbean-beaches.css">
     <link rel="stylesheet" href="css/calendar.caribbean-sea.css">
     <link rel="stylesheet" href="css/calendar.celestial-objects.css">
     <link rel="stylesheet" href="css/calendar.centaurus-constellation.css">
@@ -975,6 +976,7 @@
                 <option value="can-do-attitude">Can-Do Attitude</option>
                 <option value="candy-world">Candy World</option>
                 <option value="cardinals-guards">Cardinal's Guards</option>
+                <option value="caribbean-beaches">Caribbean Beaches</option>
                 <option value="caribbean-sea">Caribbean Sea</option>
                 <option value="celestial-objects">Celestial Objects</option>
                 <option value="centaurus-constellation">Centaurus Constellation</option>
