--- a/index.html
+++ b/index.html
@@ -579,6 +579,7 @@
     <link rel="stylesheet" href="css/calendar.the-unstoppable-mindset.css">
     <link rel="stylesheet" href="css/calendar.the-west-coast.css">
     <link rel="stylesheet" href="css/calendar.the-world-of-nature.css">
+    <link rel="stylesheet" href="css/calendar.think-different.css">
     <link rel="stylesheet" href="css/calendar.tide-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.time-complexity.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
@@ -1422,6 +1423,7 @@
                 <option value="the-unstoppable-mindset">The Unstoppable Mindset</option>
                 <option value="the-west-coast">The West Coast</option>
                 <option value="the-world-of-nature">The World of Nature</option>
+                <option value="think-different">Think Different</option>
                 <option value="tide-of-dreams">Tide of Dreams</option>
                 <option value="time-complexity">Time Complexity</option>
                 <option value="time-machine">Time Machine</option>
