--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
     <link rel="stylesheet" href="css/calendar.eagle-creek.css">
     <link rel="stylesheet" href="css/calendar.eagle-swoop.css">
     <link rel="stylesheet" href="css/calendar.early-dreams.css">
+    <link rel="stylesheet" href="css/calendar.eco-friendly.css">
     <link rel="stylesheet" href="css/calendar.eighty-mile-beach.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
     <link rel="stylesheet" href="css/calendar.emerald-water.css">
@@ -1060,6 +1061,7 @@
                 <option value="eagle-creek">Eagle Creek</option>
                 <option value="eagle-swoop">Eagle Swoop</option>
                 <option value="early-dreams">Early Dreams</option>
+                <option value="eco-friendly">Eco-Friendly</option>
                 <option value="eighty-mile-beach">Eighty Mile Beach</option>
                 <option value="emerald-stream">Emerald Stream</option>
                 <option value="emerald-water">Emerald Water</option>
