--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     <link rel="stylesheet" href="css/calendar.canary-islands.css">
     <link rel="stylesheet" href="css/calendar.can-do-attitude.css">
     <link rel="stylesheet" href="css/calendar.candy-world.css">
+    <link rel="stylesheet" href="css/calendar.captains-choice.css">
     <link rel="stylesheet" href="css/calendar.cardinals-guards.css">
     <link rel="stylesheet" href="css/calendar.caribbean-beaches.css">
     <link rel="stylesheet" href="css/calendar.caribbean-sea.css">
@@ -977,6 +978,7 @@
                 <option value="canary-islands">Canary Islands</option>
                 <option value="can-do-attitude">Can-Do Attitude</option>
                 <option value="candy-world">Candy World</option>
+                <option value="captains-choice">Captain's Choice</option>
                 <option value="cardinals-guards">Cardinal's Guards</option>
                 <option value="caribbean-beaches">Caribbean Beaches</option>
                 <option value="caribbean-sea">Caribbean Sea</option>
