--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
     <link rel="stylesheet" href="css/calendar.dream-adventure.css">
     <link rel="stylesheet" href="css/calendar.dream-islands.css">
     <link rel="stylesheet" href="css/calendar.eagle-creek.css">
+    <link rel="stylesheet" href="css/calendar.eagle-river.css">
     <link rel="stylesheet" href="css/calendar.eagle-swoop.css">
     <link rel="stylesheet" href="css/calendar.early-dreams.css">
     <link rel="stylesheet" href="css/calendar.eco-friendly.css">
@@ -1061,6 +1062,7 @@
                 <option value="dream-adventure">Dream Adventure</option>
                 <option value="dream-islands">Dream Islands</option>
                 <option value="eagle-creek">Eagle Creek</option>
+                <option value="eagle-river">Eagle River</option>
                 <option value="eagle-swoop">Eagle Swoop</option>
                 <option value="early-dreams">Early Dreams</option>
                 <option value="eco-friendly">Eco-Friendly</option>
