--- a/index.html
+++ b/index.html
@@ -505,6 +505,7 @@
     <link rel="stylesheet" href="css/calendar.smiley-world.css">
     <link rel="stylesheet" href="css/calendar.snake-river.css">
     <link rel="stylesheet" href="css/calendar.snow-leopard.css">
+    <link rel="stylesheet" href="css/calendar.soft-balance.css">
     <link rel="stylesheet" href="css/calendar.solar-flare.css">
     <link rel="stylesheet" href="css/calendar.something-special.css">
     <link rel="stylesheet" href="css/calendar.spark-of-knowledge.css">
@@ -1352,6 +1353,7 @@
                 <option value="smiley-world">Smiley World</option>
                 <option value="snake-river">Snake River</option>
                 <option value="snow-leopard">Snow Leopard</option>
+                <option value="soft-balance">Soft Balance</option>
                 <option value="solar-flare">Solar Flare</option>
                 <option value="something-special">Something Special</option>
                 <option value="spark-of-knowledge">Spark of Knowledge</option>
