--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <link rel="stylesheet" href="css/calendar.antarctic-ice.css">
     <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
     <link rel="stylesheet" href="css/calendar.aqua-marina.css">
+    <link rel="stylesheet" href="css/calendar.aqua-spirit.css">
     <link rel="stylesheet" href="css/calendar.a-quiet-creek.css">
     <link rel="stylesheet" href="css/calendar.arctic-glow.css">
     <link rel="stylesheet" href="css/calendar.arctic-snowfall.css">
@@ -103,6 +104,7 @@
     <link rel="stylesheet" href="css/calendar.blue-dragon.css">
     <link rel="stylesheet" href="css/calendar.blue-frost.css">
     <link rel="stylesheet" href="css/calendar.blue-gold.css">
+    <link rel="stylesheet" href="css/calendar.blue-horizon.css">
     <link rel="stylesheet" href="css/calendar.blue-ice.css">
     <link rel="stylesheet" href="css/calendar.blue-island-waters.css">
     <link rel="stylesheet" href="css/calendar.blue-lagoon.css">
@@ -903,6 +905,7 @@
                 <option value="antarctic-ice">Antarctic Ice</option>
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
                 <option value="aqua-marina">Aqua Marina</option>
+                <option value="aqua-spirit">Aqua Spirit</option>
                 <option value="a-quiet-creek">A Quiet Creek</option>
                 <option value="arctic-glow">Arctic Glow</option>
                 <option value="arctic-snowfall">Arctic Snowfall</option>
@@ -952,6 +955,7 @@
                 <option value="blue-dragon">Blue Dragon</option>
                 <option value="blue-frost">Blue Frost</option>
                 <option value="blue-gold">Blue & Gold</option>
+                <option value="blue-horizon">Blue Horizon</option>
                 <option value="blue-ice">Blue Ice</option>
                 <option value="blue-island-waters">Blue Island Waters</option>
                 <option value="blue-lagoon">Blue Lagoon</option>
