--- a/index.html
+++ b/index.html
@@ -396,6 +396,7 @@
     <link rel="stylesheet" href="css/calendar.new-ai.css">
     <link rel="stylesheet" href="css/calendar.new-black.css">
     <link rel="stylesheet" href="css/calendar.new-millenium.css">
+    <link rel="stylesheet" href="css/calendar.new-strategy.css">
     <link rel="stylesheet" href="css/calendar.new-style.css">
     <link rel="stylesheet" href="css/calendar.next-steps.css">
     <link rel="stylesheet" href="css/calendar.niagara-falls.css">
@@ -1247,8 +1248,9 @@
                 <option value="neon-nights">Neon Nights</option>
                 <option value="new-ai">New AI</option>
                 <option value="new-millenium">New Millenium</option>
-                <option value="next-steps">Next Steps</option>
+                <option value="new-strategy">New Strategy</option>
                 <option value="new-style">New Style</option>
+                <option value="next-steps">Next Steps</option>
                 <option value="niagara-falls">Niagara Falls</option>
                 <option value="night-dragon">Night Dragon</option>
                 <option value="night-mode-design">Night Mode Design</option>
