--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     <link rel="stylesheet" href="css/calendar.blue-ice.css">
     <link rel="stylesheet" href="css/calendar.blue-island-waters.css">
     <link rel="stylesheet" href="css/calendar.blue-lagoon.css">
+    <link rel="stylesheet" href="css/calendar.blue-marine.css">
     <link rel="stylesheet" href="css/calendar.blue-mountains.css">
     <link rel="stylesheet" href="css/calendar.blue-ocean.css">
     <link rel="stylesheet" href="css/calendar.blue-planet.css">
@@ -960,6 +961,7 @@
                 <option value="blue-ice">Blue Ice</option>
                 <option value="blue-island-waters">Blue Island Waters</option>
                 <option value="blue-lagoon">Blue Lagoon</option>
+                <option value="blue-marine">Blue Marine</option>
                 <option value="blue-mountains">Blue Mountains</option>
                 <option value="blue-ocean">Blue Ocean</option>
                 <option value="blue-planet">Blue Planet</option>
