--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
     <link rel="stylesheet" href="css/calendar.executive-management.css">
     <link rel="stylesheet" href="css/calendar.exotic-island.css">
     <link rel="stylesheet" href="css/calendar.expedient-path.css">
+    <link rel="stylesheet" href="css/calendar.expedition-north.css">
     <link rel="stylesheet" href="css/calendar.exponential-acceleration.css">
     <link rel="stylesheet" href="css/calendar.extraordinary-achievement.css">
     <link rel="stylesheet" href="css/calendar.fabulous-evening.css">
@@ -1090,6 +1091,7 @@
                 <option value="executive-management">Executive Management</option>
                 <option value="exotic-island">Exotic Island</option>
                 <option value="expedient-path">Expedient Path</option>
+                <option value="expedition-north">Expedition North</option>
                 <option value="exponential-acceleration">Exponential Acceleration</option>
                 <option value="extraordinary-achievement">Extraordinary Achievement</option>
                 <option value="fabulous-evening">Fabulous Evening</option>
