--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
     <link rel="stylesheet" href="css/calendar.golden-eagle.css">
     <link rel="stylesheet" href="css/calendar.golden-gate.css">
     <link rel="stylesheet" href="css/calendar.golden-horizon.css">
+    <link rel="stylesheet" href="css/calendar.golden-langur.css">
     <link rel="stylesheet" href="css/calendar.golden-lights.css">
     <link rel="stylesheet" href="css/calendar.golden-opportunity.css">
     <link rel="stylesheet" href="css/calendar.golden-summer.css">
@@ -1125,6 +1126,7 @@
                 <option value="golden-eagle">Golden Eagle</option>
                 <option value="golden-gate">Golden Gate</option>
                 <option value="golden-horizon">Golden Horizon</option>
+                <option value="golden-langur">Golden Langur</option>
                 <option value="golden-lights">Golden Lights</option>
                 <option value="golden-opportunity">Golden Opportunity</option>
                 <option value="golden-summer">Golden Summer</option>
