--- a/index.html
+++ b/index.html
@@ -483,6 +483,7 @@
     <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
     <link rel="stylesheet" href="css/calendar.royal-crown.css">
     <link rel="stylesheet" href="css/calendar.samurai-path.css">
+    <link rel="stylesheet" href="css/calendar.san-francisco-sunrise.css">
     <link rel="stylesheet" href="css/calendar.science-fiction.css">
     <link rel="stylesheet" href="css/calendar.sea-breeze.css">
     <link rel="stylesheet" href="css/calendar.seabreeze-avenue.css">
@@ -1337,6 +1338,8 @@
                 <option value="rocky-mountains">Rocky Mountains</option>
                 <option value="royal-caribbean">Royal Caribbean</option>
                 <option value="royal-crown">Royal Crown</option>
+                <option value="samurai-path">Samurai Path</option>
+                <option value="san-francisco-sunrise">San-Francisco Sunrise</option>
                 <option value="science-fiction">Science Fiction</option>
                 <option value="sea-breeze">Sea Breeze</option>
                 <option value="seabreeze-avenue">Seabreeze Avenue</option>
