--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
     <link rel="stylesheet" href="css/calendar.color-symphony.css">
     <link rel="stylesheet" href="css/calendar.competitive-advantage.css">
     <link rel="stylesheet" href="css/calendar.continuous-growth.css">
+    <link rel="stylesheet" href="css/calendar.cool-atlantic-waves.css">
     <link rel="stylesheet" href="css/calendar.coral-garden.css">
     <link rel="stylesheet" href="css/calendar.coral-reef.css">
     <link rel="stylesheet" href="css/calendar.cosmic-nebula.css">
@@ -1019,6 +1020,7 @@
                 <option value="color-symphony">Color Symphony</option>
                 <option value="competitive-advantage">Competitive Advantage</option>
                 <option value="continuous-growth">Continuous Growth</option>
+                <option value="cool-atlantic-waves">Cool Atlantic Waves</option>
                 <option value="coral-garden">Coral Garden</option>
                 <option value="coral-reef">Coral Reef</option>
                 <option value="cosmic-nebula">Cosmic Nebula</option>
