--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@
     <link rel="stylesheet" href="css/calendar.out-of-the-box.css">
     <link rel="stylesheet" href="css/calendar.overnight-train.css">
     <link rel="stylesheet" href="css/calendar.over-the-seven-seas.css">
+    <link rel="stylesheet" href="css/calendar.pacific-division.css">
     <link rel="stylesheet" href="css/calendar.pacific-ocean.css">
     <link rel="stylesheet" href="css/calendar.palm-beach.css">
     <link rel="stylesheet" href="css/calendar.palma-de-mallorca.css">
@@ -1295,6 +1296,7 @@
                 <option value="out-of-the-box">Out of the Box</option>
                 <option value="overnight-train">Overnight Train</option>
                 <option value="over-the-seven-seas">Over the Seven Seas</option>
+                <option value="pacific-division">Pacific Division</option>
                 <option value="pacific-ocean">Pacific Ocean</option>
                 <option value="palm-beach">Palm Beach</option>
                 <option value="palma-de-mallorca">Palma de Mallorca</option>
