--- a/index.html
+++ b/index.html
@@ -629,6 +629,7 @@
     <link rel="stylesheet" href="css/calendar.white-steamboat.css">
     <link rel="stylesheet" href="css/calendar.white-sun-of-the-desert.css">
     <link rel="stylesheet" href="css/calendar.wild-flower.css">
+    <link rel="stylesheet" href="css/calendar.wild-orange.css">
     <link rel="stylesheet" href="css/calendar.wild-rose.css">
     <link rel="stylesheet" href="css/calendar.wild-tropics.css">
     <link rel="stylesheet" href="css/calendar.wild-wonders.css">
@@ -1489,6 +1490,7 @@
                 <option value="white-steamboat">White Steamboat</option>
                 <option value="white-sun-of-the-desert">White Sun of the Desert</option>
                 <option value="wild-flower">Wild Flower</option>
+                <option value="wild-orange">Wild Orange</option>
                 <option value="wild-rose">Wild Rose</option>
                 <option value="wild-tropics">Wild Tropics</option>
                 <option value="wild-wonders">Wild Wonders</option>
