--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
     <link rel="stylesheet" href="css/calendar.golden-langur.css">
     <link rel="stylesheet" href="css/calendar.golden-lights.css">
     <link rel="stylesheet" href="css/calendar.golden-opportunity.css">
+    <link rel="stylesheet" href="css/calendar.golden-state-warriors.css">
     <link rel="stylesheet" href="css/calendar.golden-summer.css">
     <link rel="stylesheet" href="css/calendar.gold-mine.css">
     <link rel="stylesheet" href="css/calendar.gradual-improvement.css">
@@ -1135,6 +1136,7 @@
                 <option value="golden-langur">Golden Langur</option>
                 <option value="golden-lights">Golden Lights</option>
                 <option value="golden-opportunity">Golden Opportunity</option>
+                <option value="golden-state-warriors">Golden State Warriors</option>
                 <option value="golden-summer">Golden Summer</option>
                 <option value="gold-mine">Gold Mine</option>
                 <option value="gradual-improvement">Gradual Improvement</option>
