--- a/index.html
+++ b/index.html
@@ -515,6 +515,7 @@
     <link rel="stylesheet" href="css/calendar.small-success.css">
     <link rel="stylesheet" href="css/calendar.smiley-world.css">
     <link rel="stylesheet" href="css/calendar.snake-river.css">
+    <link rel="stylesheet" href="css/calendar.snoopy-white.css">
     <link rel="stylesheet" href="css/calendar.snow-leopard.css">
     <link rel="stylesheet" href="css/calendar.soft-balance.css">
     <link rel="stylesheet" href="css/calendar.solar-flare.css">
@@ -1376,6 +1377,7 @@
                 <option value="small-success">Small Success</option>
                 <option value="smiley-world">Smiley World</option>
                 <option value="snake-river">Snake River</option>
+                <option value="snoopy-white">Snoopy White</option>
                 <option value="snow-leopard">Snow Leopard</option>
                 <option value="soft-balance">Soft Balance</option>
                 <option value="solar-flare">Solar Flare</option>
