--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="css/calendar.a-huge-moment.css">
     <link rel="stylesheet" href="css/calendar.air-power.css">
     <link rel="stylesheet" href="css/calendar.a-king-of-stone.css">
+    <link rel="stylesheet" href="css/calendar.alaska-glacial-water.css">
     <link rel="stylesheet" href="css/calendar.aloe-vera.css">
     <link rel="stylesheet" href="css/calendar.alone-in-paradise.css">
     <link rel="stylesheet" href="css/calendar.a-lovely-day.css">
@@ -899,6 +900,7 @@
                 <option value="a-huge-moment">A Huge Moment</option>
                 <option value="air-power">Air Power</option>
                 <option value="a-king-of-stone">A King of Stone</option>
+                <option value="alaska-glacial-water">Alaska Glacial Water</option>
                 <option value="aloe-vera">Aloe Vera</option>
                 <option value="alone-in-paradise">Alone in Paradise</option>
                 <option value="a-lovely-day">A Lovely Day</option>
