--- a/index.html
+++ b/index.html
@@ -306,6 +306,7 @@
     <link rel="stylesheet" href="css/calendar.high-speed-rail.css">
     <link rel="stylesheet" href="css/calendar.high-speed-train.css">
     <link rel="stylesheet" href="css/calendar.high-style.css">
+    <link rel="stylesheet" href="css/calendar.high-tech-industry.css">
     <link rel="stylesheet" href="css/calendar.hometown-vibes.css">
     <link rel="stylesheet" href="css/calendar.honolulu-weekend.css">
     <link rel="stylesheet" href="css/calendar.hot-desert-summer.css">
@@ -1170,6 +1171,7 @@
                 <option value="high-speed-rail">High-Speed Rail</option>
                 <option value="high-speed-train">High-Speed Train</option>
                 <option value="high-style">High Style</option>
+                <option value="high-tech-industry">High-Tech Industry</option>
                 <option value="hometown-vibes">Hometown Vibes</option>
                 <option value="honolulu-weekend">Honolulu Weekend</option>
                 <option value="hot-desert-summer">Hot Desert Summer</option>
