--- a/index.html
+++ b/index.html
@@ -489,6 +489,7 @@
     <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
     <link rel="stylesheet" href="css/calendar.royal-crown.css">
     <link rel="stylesheet" href="css/calendar.samurai-path.css">
+    <link rel="stylesheet" href="css/calendar.saint-tropez-moon.css">
     <link rel="stylesheet" href="css/calendar.san-francisco-sunrise.css">
     <link rel="stylesheet" href="css/calendar.science-fiction.css">
     <link rel="stylesheet" href="css/calendar.sea-breeze.css">
@@ -1353,6 +1354,7 @@
                 <option value="royal-caribbean">Royal Caribbean</option>
                 <option value="royal-crown">Royal Crown</option>
                 <option value="samurai-path">Samurai Path</option>
+                <option value="saint-tropez-moon">Saint Tropez Moon</option>
                 <option value="san-francisco-sunrise">San-Francisco Sunrise</option>
                 <option value="science-fiction">Science Fiction</option>
                 <option value="sea-breeze">Sea Breeze</option>
