--- a/index.html
+++ b/index.html
@@ -490,6 +490,7 @@
     <link rel="stylesheet" href="css/calendar.royal-crown.css">
     <link rel="stylesheet" href="css/calendar.samurai-path.css">
     <link rel="stylesheet" href="css/calendar.saint-tropez-moon.css">
+    <link rel="stylesheet" href="css/calendar.san-francisco-lights.css">
     <link rel="stylesheet" href="css/calendar.san-francisco-sunrise.css">
     <link rel="stylesheet" href="css/calendar.science-fiction.css">
     <link rel="stylesheet" href="css/calendar.sea-breeze.css">
@@ -1355,7 +1356,8 @@
                 <option value="royal-crown">Royal Crown</option>
                 <option value="samurai-path">Samurai Path</option>
                 <option value="saint-tropez-moon">Saint Tropez Moon</option>
-                <option value="san-francisco-sunrise">San-Francisco Sunrise</option>
+                <option value="san-francisco-lights">San Francisco Lights</option>
+                <option value="san-francisco-sunrise">San Francisco Sunrise</option>
                 <option value="science-fiction">Science Fiction</option>
                 <option value="sea-breeze">Sea Breeze</option>
                 <option value="seabreeze-avenue">Seabreeze Avenue</option>
