--- a/index.html
+++ b/index.html
@@ -508,6 +508,7 @@
     <link rel="stylesheet" href="css/calendar.serene-shores.css">
     <link rel="stylesheet" href="css/calendar.shades-of-blue.css">
     <link rel="stylesheet" href="css/calendar.shaolin-monastery.css">
+    <link rel="stylesheet" href="css/calendar.shaping-the-future.css">
     <link rel="stylesheet" href="css/calendar.shift-in-perception.css">
     <link rel="stylesheet" href="css/calendar.significant-improvement.css">
     <link rel="stylesheet" href="css/calendar.silicon-valley.css">
@@ -1375,6 +1376,7 @@
                 <option value="serene-shores">Serene Shores</option>
                 <option value="shades-of-blue">Shades Of Blue</option>
                 <option value="shaolin-monastery">Shaolin Monastery</option>
+                <option value="shaping-the-future">Shaping the Future</option>
                 <option value="shift-in-perception">Shift in Perception</option>
                 <option value="significant-improvement">Significant Improvement</option>
                 <option value="silicon-valley">Silicon Valley</option>
