--- a/index.html
+++ b/index.html
@@ -603,6 +603,7 @@
     <link rel="stylesheet" href="css/calendar.the-world-of-nature.css">
     <link rel="stylesheet" href="css/calendar.think-different.css">
     <link rel="stylesheet" href="css/calendar.tide-of-dreams.css">
+    <link rel="stylesheet" href="css/calendar.tiger-design.css">
     <link rel="stylesheet" href="css/calendar.time-complexity.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
     <link rel="stylesheet" href="css/calendar.time-to-chill.css">
@@ -1472,6 +1473,7 @@
                 <option value="the-world-of-nature">The World of Nature</option>
                 <option value="think-different">Think Different</option>
                 <option value="tide-of-dreams">Tide of Dreams</option>
+                <option value="tiger-design">Tiger Design</option>
                 <option value="time-complexity">Time Complexity</option>
                 <option value="time-machine">Time Machine</option>
                 <option value="time-to-chill">Time to Chill</option>
