--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@
     <link rel="stylesheet" href="css/calendar.purple-sunset.css">
     <link rel="stylesheet" href="css/calendar.quantum-programmer.css">
     <link rel="stylesheet" href="css/calendar.queen-of-ambience.css">
+    <link rel="stylesheet" href="css/calendar.quiet-confidence.css">
     <link rel="stylesheet" href="css/calendar.quiet-evening.css">
     <link rel="stylesheet" href="css/calendar.quiet-progress.css">
     <link rel="stylesheet" href="css/calendar.race-ready.css">
@@ -1339,6 +1340,7 @@
                 <option value="purple-sunset">Purple Sunset</option>
                 <option value="quantum-programmer">Quantum Programmer</option>
                 <option value="queen-of-ambience">Queen of Ambience</option>
+                <option value="quiet-confidence">Quiet Confidence</option>
                 <option value="quiet-evening">Quiet Evening</option>
                 <option value="quiet-progress">Quiet Progress</option>
                 <option value="race-ready">Race Ready</option>
