--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
     <link rel="stylesheet" href="css/calendar.migratory-birds.css">
     <link rel="stylesheet" href="css/calendar.mirror-lake.css">
     <link rel="stylesheet" href="css/calendar.modern-technology.css">
+    <link rel="stylesheet" href="css/calendar.mogren-beach.css">
     <link rel="stylesheet" href="css/calendar.monochrome-ink.css">
     <link rel="stylesheet" href="css/calendar.moon-bridge.css">
     <link rel="stylesheet" href="css/calendar.moonlit-path.css">
@@ -1252,6 +1253,7 @@
                 <option value="migratory-birds">Migratory Birds</option>
                 <option value="mirror-lake">Mirror Lake</option>
                 <option value="modern-technology">Modern Technology</option>
+                <option value="mogren-beach">Mogren Beach</option>
                 <option value="monochrome-ink">Monochrome Ink</option>
                 <option value="moon-bridge">Moon Bridge</option>
                 <option value="moonlit-path">Moonlit Path</option>
