--- a/index.html
+++ b/index.html
@@ -547,6 +547,7 @@
     <link rel="stylesheet" href="css/calendar.street-art-installation.css">
     <link rel="stylesheet" href="css/calendar.street-fashion-style.css">
     <link rel="stylesheet" href="css/calendar.strength-of-spirit.css">
+    <link rel="stylesheet" href="css/calendar.strings-of-sunrays.css">
     <link rel="stylesheet" href="css/calendar.strong-foundation.css">
     <link rel="stylesheet" href="css/calendar.style-spectrum.css">
     <link rel="stylesheet" href="css/calendar.success-key.css">
@@ -1418,6 +1419,7 @@
                 <option value="street-art-installation">Street Art Installation</option>
                 <option value="street-fashion-style">Street Fashion Style</option>
                 <option value="strength-of-spirit">Strength of Spirit</option>
+                <option value="strings-of-sunrays">Strings of Sunrays</option>
                 <option value="strong-foundation">Strong Foundation</option>
                 <option value="style-spectrum">Style Spectrum</option>
                 <option value="success-key">Success Key</option>
