--- a/index.html
+++ b/index.html
@@ -407,6 +407,7 @@
     <link rel="stylesheet" href="css/calendar.new-millenium.css">
     <link rel="stylesheet" href="css/calendar.new-strategy.css">
     <link rel="stylesheet" href="css/calendar.new-style.css">
+    <link rel="stylesheet" href="css/calendar.next-level.css">
     <link rel="stylesheet" href="css/calendar.next-steps.css">
     <link rel="stylesheet" href="css/calendar.niagara-falls.css">
     <link rel="stylesheet" href="css/calendar.night-dragon.css">
@@ -1279,6 +1280,7 @@
                 <option value="new-millenium">New Millenium</option>
                 <option value="new-strategy">New Strategy</option>
                 <option value="new-style">New Style</option>
+                <option value="next-level">Next Level</option>
                 <option value="next-steps">Next Steps</option>
                 <option value="niagara-falls">Niagara Falls</option>
                 <option value="night-dragon">Night Dragon</option>
