--- a/index.html
+++ b/index.html
@@ -633,6 +633,7 @@
     <link rel="stylesheet" href="css/calendar.vibrant-colors.css">
     <link rel="stylesheet" href="css/calendar.viking-helmet.css">
     <link rel="stylesheet" href="css/calendar.viktoria-falls.css">
+    <link rel="stylesheet" href="css/calendar.watermelon.css">
     <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
     <link rel="stylesheet" href="css/calendar.weekend-mindset.css">
     <link rel="stylesheet" href="css/calendar.we-fly-higher.css">
@@ -1508,6 +1509,7 @@
                 <option value="vibrant-colors">Vibrant Colors</option>
                 <option value="viking-helmet">Viking Helmet</option>
                 <option value="viktoria-falls">Viktoria Falls</option>
+                <option value="watermelon">Watermelon</option>
                 <option value="weekend-downtime">Weekend Downtime</option>
                 <option value="weekend-mindset">Weekend Mindset</option>
                 <option value="we-fly-higher">We Fly Higher</option>
