--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
     <link rel="stylesheet" href="css/calendar.limited-edition.css">
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
     <link rel="stylesheet" href="css/calendar.logical-intelligence.css">
+    <link rel="stylesheet" href="css/calendar.los-angeles-lakers.css">
     <link rel="stylesheet" href="css/calendar.love-and-passion.css">
     <link rel="stylesheet" href="css/calendar.love-of-yesterday.css">
     <link rel="stylesheet" href="css/calendar.love-station.css">
@@ -1229,6 +1230,7 @@
                 <option value="limited-edition">Limited Edition</option>
                 <option value="lions-mane">Lion's Mane</option>
                 <option value="logical-intelligence">Logical Intelligence</option>
+                <option value="los-angeles-lakers">Los Angeles Lakers</option>
                 <option value="love-and-passion">𝐋𝐨𝐯𝐞 & 𝐏𝐚𝐬𝐬𝐢𝐨𝐧</option>
                 <option value="love-of-yesterday">𝐋𝐨𝐯𝐞 of Yesterday</option>
                 <option value="love-station">Love Station</option>
