--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
     <link rel="stylesheet" href="css/calendar.fiji-islands.css">
     <link rel="stylesheet" href="css/calendar.finish-line.css">
     <link rel="stylesheet" href="css/calendar.fir-balsam.css">
+    <link rel="stylesheet" href="css/calendar.flamingo-bay.css">
     <link rel="stylesheet" href="css/calendar.flamingo-sky.css">
     <link rel="stylesheet" href="css/calendar.forgotten-dreams.css">
     <link rel="stylesheet" href="css/calendar.formula-one.css">
@@ -385,6 +386,7 @@
     <link rel="stylesheet" href="css/calendar.modern-technology.css">
     <link rel="stylesheet" href="css/calendar.mogren-beach.css">
     <link rel="stylesheet" href="css/calendar.monochrome-ink.css">
+    <link rel="stylesheet" href="css/calendar.monte-carlo.css">
     <link rel="stylesheet" href="css/calendar.moon-bridge.css">
     <link rel="stylesheet" href="css/calendar.moonlit-path.css">
     <link rel="stylesheet" href="css/calendar.morning-coffee.css">
@@ -1126,6 +1128,7 @@
                 <option value="fiji-islands">Fiji Islands</option>
                 <option value="finish-line">Finish Line</option>
                 <option value="fir-balsam">Fir Balsam</option>
+                <option value="flamingo-bay">Flamingo Bay</option>
                 <option value="flamingo-sky">Flamingo Sky</option>
                 <option value="forgotten-dreams">Forgotten Dreams</option>
                 <option value="formula-one">Formula One</option>
@@ -1262,6 +1265,7 @@
                 <option value="modern-technology">Modern Technology</option>
                 <option value="mogren-beach">Mogren Beach</option>
                 <option value="monochrome-ink">Monochrome Ink</option>
+                <option value="monte-carlo">Monte Carlo</option>
                 <option value="moon-bridge">Moon Bridge</option>
                 <option value="moonlit-path">Moonlit Path</option>
                 <option value="morning-coffee">Morning Coffee</option>
