--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
     <link rel="stylesheet" href="css/calendar.logical-intelligence.css">
     <link rel="stylesheet" href="css/calendar.los-angeles-lakers.css">
+    <link rel="stylesheet" href="css/calendar.los-angeles-sky.css">
     <link rel="stylesheet" href="css/calendar.love-and-passion.css">
     <link rel="stylesheet" href="css/calendar.love-of-yesterday.css">
     <link rel="stylesheet" href="css/calendar.love-station.css">
@@ -1234,8 +1235,9 @@
                 <option value="lions-mane">Lion's Mane</option>
                 <option value="logical-intelligence">Logical Intelligence</option>
                 <option value="los-angeles-lakers">Los Angeles Lakers</option>
-                <option value="love-and-passion">𝐋𝐨𝐯𝐞 & 𝐏𝐚𝐬𝐬𝐢𝐨𝐧</option>
-                <option value="love-of-yesterday">𝐋𝐨𝐯𝐞 of Yesterday</option>
+                <option value="los-angeles-sky">Los Angeles Sky</option>
+                <option value="love-and-passion">Love & Passion</option>
+                <option value="love-of-yesterday">Love of Yesterday</option>
                 <option value="love-station">Love Station</option>
                 <option value="lucid-dream">Lucid Dream</option>
                 <option value="lunar-eclipse">Lunar Eclipse</option>
