--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
     <link rel="stylesheet" href="css/calendar.limited-edition.css">
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
     <link rel="stylesheet" href="css/calendar.logical-intelligence.css">
+    <link rel="stylesheet" href="css/calendar.long-beach.css">
     <link rel="stylesheet" href="css/calendar.los-angeles-lakers.css">
     <link rel="stylesheet" href="css/calendar.los-angeles-sky.css">
     <link rel="stylesheet" href="css/calendar.love-and-passion.css">
@@ -1234,6 +1235,7 @@
                 <option value="limited-edition">Limited Edition</option>
                 <option value="lions-mane">Lion's Mane</option>
                 <option value="logical-intelligence">Logical Intelligence</option>
+                <option value="long-beach">Long Beach</option>
                 <option value="los-angeles-lakers">Los Angeles Lakers</option>
                 <option value="los-angeles-sky">Los Angeles Sky</option>
                 <option value="love-and-passion">Love & Passion</option>
