--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
     <link rel="stylesheet" href="css/calendar.golden-coast.css">
     <link rel="stylesheet" href="css/calendar.golden-eagle.css">
     <link rel="stylesheet" href="css/calendar.golden-gate.css">
+    <link rel="stylesheet" href="css/calendar.golden-hillsides.css">
     <link rel="stylesheet" href="css/calendar.golden-horizon.css">
     <link rel="stylesheet" href="css/calendar.golden-langur.css">
     <link rel="stylesheet" href="css/calendar.golden-lights.css">
@@ -1154,6 +1155,7 @@
                 <option value="golden-coast">Golden Coast</option>
                 <option value="golden-eagle">Golden Eagle</option>
                 <option value="golden-gate">Golden Gate</option>
+                <option value="golden-hillsides">Golden Hillsides</option>
                 <option value="golden-horizon">Golden Horizon</option>
                 <option value="golden-langur">Golden Langur</option>
                 <option value="golden-lights">Golden Lights</option>
