--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <link rel="stylesheet" href="css/calendar.a-new-opportunity.css">
     <link rel="stylesheet" href="css/calendar.antarctic-ice.css">
     <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
+    <link rel="stylesheet" href="css/calendar.apple-in-honey.css">
     <link rel="stylesheet" href="css/calendar.aqua-marina.css">
     <link rel="stylesheet" href="css/calendar.aqua-spirit.css">
     <link rel="stylesheet" href="css/calendar.a-quiet-creek.css">
@@ -935,6 +936,7 @@
                 <option value="a-new-opportunity">A New Opportunity</option>
                 <option value="antarctic-ice">Antarctic Ice</option>
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
+                <option value="apple-in-honey">Apple in Honey</option>
                 <option value="aqua-marina">Aqua Marina</option>
                 <option value="aqua-spirit">Aqua Spirit</option>
                 <option value="a-quiet-creek">A Quiet Creek</option>
