--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
     <link rel="stylesheet" href="css/calendar.black-bird.css">
     <link rel="stylesheet" href="css/calendar.black-classic.css">
     <link rel="stylesheet" href="css/calendar.black-coffee.css">
+    <link rel="stylesheet" href="css/calendar.black-diamond.css">
     <link rel="stylesheet" href="css/calendar.black-fashion.css">
     <link rel="stylesheet" href="css/calendar.black-hacker.css">
     <link rel="stylesheet" href="css/calendar.black-hawk.css">
@@ -971,6 +972,7 @@
                 <option value="black-bird">Black Bird</option>
                 <option value="black-classic">Black Classic</option>
                 <option value="black-coffee">Black Coffee</option>
+                <option value="black-diamond">Black Diamond</option>
                 <option value="black-fashion">Black Fashion</option>
                 <option value="black-hacker">Black Hacker</option>
                 <option value="black-hawk">Black Hawk</option>
