--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@
     <link rel="stylesheet" href="css/calendar.new-ai.css">
     <link rel="stylesheet" href="css/calendar.new-black.css">
     <link rel="stylesheet" href="css/calendar.new-millenium.css">
+    <link rel="stylesheet" href="css/calendar.new-mission.css">
     <link rel="stylesheet" href="css/calendar.new-strategy.css">
     <link rel="stylesheet" href="css/calendar.new-style.css">
     <link rel="stylesheet" href="css/calendar.next-level.css">
@@ -1299,6 +1300,7 @@
                 <option value="neon-nights">Neon Nights</option>
                 <option value="new-ai">New AI</option>
                 <option value="new-millenium">New Millenium</option>
+                <option value="new-mission">New Mission</option>
                 <option value="new-strategy">New Strategy</option>
                 <option value="new-style">New Style</option>
                 <option value="next-level">Next Level</option>
