--- a/index.html
+++ b/index.html
@@ -389,6 +389,7 @@
     <link rel="stylesheet" href="css/calendar.midnight-elegance.css">
     <link rel="stylesheet" href="css/calendar.migratory-birds.css">
     <link rel="stylesheet" href="css/calendar.mirror-lake.css">
+    <link rel="stylesheet" href="css/calendar.mission-completed.css">
     <link rel="stylesheet" href="css/calendar.modern-technology.css">
     <link rel="stylesheet" href="css/calendar.mogren-beach.css">
     <link rel="stylesheet" href="css/calendar.monochrome-ink.css">
@@ -1275,6 +1276,7 @@
                 <option value="midnight-elegance">Midnight Elegance</option>
                 <option value="migratory-birds">Migratory Birds</option>
                 <option value="mirror-lake">Mirror Lake</option>
+                <option value="mission-completed">Mission Completed</option>
                 <option value="modern-technology">Modern Technology</option>
                 <option value="mogren-beach">Mogren Beach</option>
                 <option value="monochrome-ink">Monochrome Ink</option>
