--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@
     <link rel="stylesheet" href="css/calendar.mediterranean-dreams.css">
     <link rel="stylesheet" href="css/calendar.melting-glaciers.css">
     <link rel="stylesheet" href="css/calendar.microtactic-environment.css">
+    <link rel="stylesheet" href="css/calendar.middle-of-nowhere.css">
     <link rel="stylesheet" href="css/calendar.midnight-alchemy.css">
     <link rel="stylesheet" href="css/calendar.midnight-black.css">
     <link rel="stylesheet" href="css/calendar.midnight-sun.css">
@@ -1269,6 +1270,7 @@
                 <option value="mediterranean-dreams">Mediterranean Dreams</option>
                 <option value="melting-glaciers">Melting Glaciers</option>
                 <option value="microtactic-environment">Microtactic Environment</option>
+                <option value="middle-of-nowhere">Middle of Nowhere</option>
                 <option value="midnight-alchemy">Midnight Alchemy</option>
                 <option value="midnight-black">Midnight Black</option>
                 <option value="midnight-sun">Midnight Sun</option>
