--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
     <link rel="stylesheet" href="css/calendar.golden-opportunity.css">
     <link rel="stylesheet" href="css/calendar.golden-state-warriors.css">
     <link rel="stylesheet" href="css/calendar.golden-summer.css">
+    <link rel="stylesheet" href="css/calendar.golden-time.css">
     <link rel="stylesheet" href="css/calendar.gold-mine.css">
     <link rel="stylesheet" href="css/calendar.gradual-improvement.css">
     <link rel="stylesheet" href="css/calendar.grand-prix.css">
@@ -1172,6 +1173,7 @@
                 <option value="golden-opportunity">Golden Opportunity</option>
                 <option value="golden-state-warriors">Golden State Warriors</option>
                 <option value="golden-summer">Golden Summer</option>
+                <option value="golden-time">Golden Time</option>
                 <option value="gold-mine">Gold Mine</option>
                 <option value="gradual-improvement">Gradual Improvement</option>
                 <option value="grand-prix">Grand Prix</option>
