--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
     <link rel="stylesheet" href="css/calendar.dramatic-coastline.css">
     <link rel="stylesheet" href="css/calendar.dream-adventure.css">
     <link rel="stylesheet" href="css/calendar.dream-islands.css">
+    <link rel="stylesheet" href="css/calendar.eagle-beach-aruba.css">
     <link rel="stylesheet" href="css/calendar.eagle-creek.css">
     <link rel="stylesheet" href="css/calendar.eagle-river.css">
     <link rel="stylesheet" href="css/calendar.eagle-swoop.css">
@@ -1112,6 +1113,7 @@
                 <option value="dramatic-coastline">Dramatic Coastline</option>
                 <option value="dream-adventure">Dream Adventure</option>
                 <option value="dream-islands">Dream Islands</option>
+                <option value="eagle-beach-aruba">Eagle Beach Aruba</option>
                 <option value="eagle-creek">Eagle Creek</option>
                 <option value="eagle-river">Eagle River</option>
                 <option value="eagle-swoop">Eagle Swoop</option>
