--- a/index.html
+++ b/index.html
@@ -460,8 +460,9 @@
     <link rel="stylesheet" href="css/calendar.over-the-seven-seas.css">
     <link rel="stylesheet" href="css/calendar.pacific-division.css">
     <link rel="stylesheet" href="css/calendar.pacific-ocean.css">
-    <link rel="stylesheet" href="css/calendar.palm-beach.css">
     <link rel="stylesheet" href="css/calendar.palma-de-mallorca.css">
+    <link rel="stylesheet" href="css/calendar.palm-beach.css">
+    <link rel="stylesheet" href="css/calendar.palm-beach-aruba.css">
     <link rel="stylesheet" href="css/calendar.patagonian-shores.css">
     <link rel="stylesheet" href="css/calendar.patagonian-sky.css">
     <link rel="stylesheet" href="css/calendar.perfect-afternoon.css">
@@ -1350,8 +1351,9 @@
                 <option value="over-the-seven-seas">Over the Seven Seas</option>
                 <option value="pacific-division">Pacific Division</option>
                 <option value="pacific-ocean">Pacific Ocean</option>
-                <option value="palm-beach">Palm Beach</option>
                 <option value="palma-de-mallorca">Palma de Mallorca</option>
+                <option value="palm-beach">Palm Beach</option>
+                <option value="palm-beach-aruba">Palm Beach Aruba</option>
                 <option value="patagonian-shores">Patagonian Shores</option>
                 <option value="patagonian-sky">Patagonian Sky</option>
                 <option value="perfect-afternoon">Perfect Afternoon</option>
