--- a/index.html
+++ b/index.html
@@ -580,6 +580,7 @@
     <link rel="stylesheet" href="css/calendar.supreme-level.css">
     <link rel="stylesheet" href="css/calendar.surfing-club.css">
     <link rel="stylesheet" href="css/calendar.sweet-misty-morning.css">
+    <link rel="stylesheet" href="css/calendar.swiss-train.css">
     <link rel="stylesheet" href="css/calendar.sword-of-fate.css">
     <link rel="stylesheet" href="css/calendar.tactical-advantage.css">
     <link rel="stylesheet" href="css/calendar.tactical-command.css">
@@ -1471,6 +1472,7 @@
                 <option value="supreme-level">Supreme Level</option>
                 <option value="surfing-club">Surfing Club</option>
                 <option value="sweet-misty-morning">Sweet Misty Morning</option>
+                <option value="swiss-train">Swiss Train</option>
                 <option value="sword-of-fate">Sword of Fate</option>
                 <option value="tactical-advantage">Tactical Advantage</option>
                 <option value="tactical-command">Tactical Command</option>
