--- a/index.html
+++ b/index.html
@@ -631,6 +631,7 @@
     <link rel="stylesheet" href="css/calendar.time-to-chill.css">
     <link rel="stylesheet" href="css/calendar.tokyo-at-night.css">
     <link rel="stylesheet" href="css/calendar.too-beautiful-to-be-true.css">
+    <link rel="stylesheet" href="css/calendar.toronto-raptors.css">
     <link rel="stylesheet" href="css/calendar.tropical-islands.css">
     <link rel="stylesheet" href="css/calendar.tropical-jungle.css">
     <link rel="stylesheet" href="css/calendar.tropical-nature.css">
@@ -1017,6 +1018,7 @@
                 <option value="blue-window">Blue Window</option>
                 <option value="bold-vision">Bold Vision</option>
                 <option value="bora-bora">Bora Bora</option>
+                <option value="boston-celtics">Boston Celtics</option>
                 <option value="box-of-surprises">Box of Surprises</option>
                 <option value="breaking-point">Breaking Point</option>
                 <option value="break-the-night">Break the Night</option>
@@ -1524,6 +1526,7 @@
                 <option value="time-to-chill">Time to Chill</option>
                 <option value="tokyo-at-night">Tokyo at Night</option>
                 <option value="too-beautiful-to-be-true">Too Beautiful to be True</option>
+                <option value="toronto-raptors">Toronto Raptors</option>
                 <option value="tropical-islands">Tropical Islands</option>
                 <option value="tropical-jungle">Tropical Jungle</option>
                 <option value="tropical-nature">Tropical Nature</option>
