--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
     <link rel="stylesheet" href="css/calendar.blue-window.css">
     <link rel="stylesheet" href="css/calendar.bold-vision.css">
     <link rel="stylesheet" href="css/calendar.bora-bora.css">
+    <link rel="stylesheet" href="css/calendar.boston-celtics.css">
     <link rel="stylesheet" href="css/calendar.box-of-surprises.css">
     <link rel="stylesheet" href="css/calendar.breaking-point.css">
     <link rel="stylesheet" href="css/calendar.break-the-night.css">
