--- a/index.html
+++ b/index.html
@@ -586,6 +586,7 @@
     <link rel="stylesheet" href="css/calendar.tactical-advantage.css">
     <link rel="stylesheet" href="css/calendar.tactical-command.css">
     <link rel="stylesheet" href="css/calendar.take-me-to-summer.css">
+    <link rel="stylesheet" href="css/calendar.tea-garden.css">
     <link rel="stylesheet" href="css/calendar.tech-innovator.css">
     <link rel="stylesheet" href="css/calendar.technological-future.css">
     <link rel="stylesheet" href="css/calendar.technological-innovation.css">
@@ -1480,6 +1481,7 @@
                 <option value="tactical-advantage">Tactical Advantage</option>
                 <option value="tactical-command">Tactical Command</option>
                 <option value="take-me-to-summer">Take Me to Summer</option>
+                <option value="tea-garden">Tea Garden</option>
                 <option value="tech-innovator">Tech Innovator</option>
                 <option value="technological-future">Technological Future</option>
                 <option value="technological-innovation">Technological Innovation</option>
