--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
     <link rel="stylesheet" href="css/calendar.celestial-objects.css">
     <link rel="stylesheet" href="css/calendar.centaurus-constellation.css">
     <link rel="stylesheet" href="css/calendar.cherry-garden.css">
+    <link rel="stylesheet" href="css/calendar.chicago-bulls.css">
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
     <link rel="stylesheet" href="css/calendar.citrus-blaze.css">
     <link rel="stylesheet" href="css/calendar.city-of-angels.css">
@@ -1043,6 +1044,7 @@
                 <option value="celestial-objects">Celestial Objects</option>
                 <option value="centaurus-constellation">Centaurus Constellation</option>
                 <option value="cherry-garden">Cherry Garden</option>
+                <option value="chicago-bulls">Chicago Bulls</option>
                 <option value="core">Choose Layout Mode</option>
                 <option value="cinnamon-street">Cinnamon Street</option>
                 <option value="citrus-blaze">Citrus Blaze</option>
