--- a/index.html
+++ b/index.html
@@ -510,6 +510,7 @@
     <link rel="stylesheet" href="css/calendar.rocky-mountains.css">
     <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
     <link rel="stylesheet" href="css/calendar.royal-crown.css">
+    <link rel="stylesheet" href="css/calendar.sacramento-kings.css">
     <link rel="stylesheet" href="css/calendar.samurai-path.css">
     <link rel="stylesheet" href="css/calendar.saint-tropez-moon.css">
     <link rel="stylesheet" href="css/calendar.san-francisco-lights.css">
@@ -1406,6 +1407,7 @@
                 <option value="rocky-mountains">Rocky Mountains</option>
                 <option value="royal-caribbean">Royal Caribbean</option>
                 <option value="royal-crown">Royal Crown</option>
+                <option value="sacramento-kings">Sacramento Kings</option>
                 <option value="samurai-path">Samurai Path</option>
                 <option value="saint-tropez-moon">Saint Tropez Moon</option>
                 <option value="san-francisco-lights">San Francisco Lights</option>
