--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
     <link rel="stylesheet" href="css/calendar.logical-intelligence.css">
     <link rel="stylesheet" href="css/calendar.long-beach.css">
+    <link rel="stylesheet" href="css/calendar.long-beach-fiji.css">
     <link rel="stylesheet" href="css/calendar.los-angeles-lakers.css">
     <link rel="stylesheet" href="css/calendar.los-angeles-sky.css">
     <link rel="stylesheet" href="css/calendar.love-and-passion.css">
@@ -1261,6 +1262,7 @@
                 <option value="lions-mane">Lion's Mane</option>
                 <option value="logical-intelligence">Logical Intelligence</option>
                 <option value="long-beach">Long Beach</option>
+                <option value="long-beach-fiji">Long Beach Fiji</option>
                 <option value="los-angeles-lakers">Los Angeles Lakers</option>
                 <option value="los-angeles-sky">Los Angeles Sky</option>
                 <option value="love-and-passion">Love & Passion</option>
